pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart.strong.modular.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:6:6: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
// Try removing the parameter type, or make it a supertype of the receiver type.
//   1.(String p) => p; // Error
//      ^
//
// pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:7:7: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
// Try removing the parameter type, or make it a supertype of the receiver type.
//   1?.(String p) => p; // Error
//       ^
//
// pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:8:7: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
// Try removing the parameter type, or make it a supertype of the receiver type.
//   1..(String p) => p; // Error
//       ^
//
// pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:9:8: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
// Try removing the parameter type, or make it a supertype of the receiver type.
//   1?..(String p) => p; // Error
//        ^
//
import self as self;
import "dart:core" as core;

static method test() → void {
  let core::String p = invalid-expression "pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:6:6: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
Try removing the parameter type, or make it a supertype of the receiver type.
  1.(String p) => p; // Error
     ^" in 1 as{TypeError} core::String in p;
  let synthesized core::int anonymous#receiver = invalid-expression "pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:7:7: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
Try removing the parameter type, or make it a supertype of the receiver type.
  1?.(String p) => p; // Error
      ^" in 1 as{TypeError} core::String in anonymous#receiver == null ?{core::String?} null : let core::String p = anonymous#receiver as core::String in p;
  let final core::int #t1 = 1 in block {
    let core::String p = invalid-expression "pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:8:7: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
Try removing the parameter type, or make it a supertype of the receiver type.
  1..(String p) => p; // Error
      ^" in #t1 as{TypeError} core::String in let dynamic #t2 = p in p;
  } =>#t1;
  let final core::int #t3 = 1 in #t3 == null ?{core::int} #t3 : block {
    let synthesized core::int anonymous#receiver = invalid-expression "pkg/front_end/testcases/coverage/anonymous_methods/expression_explicitly_wrongly_typed.dart:9:8: Error: The receiver type 'int' must be assignable to the formal parameter type 'String' in an anonymous method.
Try removing the parameter type, or make it a supertype of the receiver type.
  1?..(String p) => p; // Error
       ^" in #t3 as{TypeError} core::String in anonymous#receiver == null ?{core::int?} null : let core::String p = anonymous#receiver as core::String in let dynamic #t4 = p in p;
  } =>#t3;
}
